--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <div class="col-12 col-sm-6 col-lg-3">
                     <h6>Follow Me</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#"><i class="fa fa-fw fa-github" aria-hidden="true"></i>GitHub</a></li>
+                            <li><a href="https://github.com/FernandoNunez-Dev"><i class="fa fa-fw fa-github" aria-hidden="true"></i>GitHub</a></li>
                             <li><a href="#"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>LinkedIn</a></li>
                             <li><a href="#"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i>Instagram</a></li>
                             <li><a href="#"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i>Facebook</a></li>
