--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <h6>Follow Me</h6>
                         <ul class="list-unstyled">
                             <li><a href="https://github.com/FernandoNunez-Dev"><i class="fa fa-fw fa-github" aria-hidden="true"></i>GitHub</a></li>
-                            <li><a href="#"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/fernandonunez-dev/"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>LinkedIn</a></li>
                             <li><a href="#"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i>Instagram</a></li>
                             <li><a href="#"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i>Facebook</a></li>
                         </ul>
